# pkg/api/v1/blog-service.pb.go
@@ -75,10 +75,11 @@ func (m *Comment) GetText() string {
 }
 
 type Post struct {
-	Author               string     `protobuf:"bytes,1,opt,name=author,proto3" json:"author,omitempty"`
-	Title                string     `protobuf:"bytes,2,opt,name=title,proto3" json:"title,omitempty"`
-	Text                 string     `protobuf:"bytes,3,opt,name=text,proto3" json:"text,omitempty"`
-	Comments             []*Comment `protobuf:"bytes,4,rep,name=comments,proto3" json:"comments,omitempty"`
+	Id                   string     `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	Author               string     `protobuf:"bytes,2,opt,name=author,proto3" json:"author,omitempty"`
+	Title                string     `protobuf:"bytes,3,opt,name=title,proto3" json:"title,omitempty"`
+	Text                 string     `protobuf:"bytes,4,opt,name=text,proto3" json:"text,omitempty"`
+	Comments             []*Comment `protobuf:"bytes,5,rep,name=comments,proto3" json:"comments,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}   `json:"-"`
 	XXX_unrecognized     []byte     `json:"-"`
 	XXX_sizecache        int32      `json:"-"`
@@ -108,6 +109,13 @@ func (m *Post) XXX_DiscardUnknown() {
 }
 
 var xxx_messageInfo_Post proto.InternalMessageInfo
+
+func (m *Post) GetId() string {
+	if m != nil {
+		return m.Id
+	}
+	return ""
+}
 
 func (m *Post) GetAuthor() string {
 	if m != nil {
@@ -271,7 +279,6 @@ func (m *CreatePostRequest) GetText() string {
 }
 
 type CreatePostResponse struct {
-	Id                   string   `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
 	Post                 *Post    `protobuf:"bytes,2,opt,name=post,proto3" json:"post,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
@@ -302,13 +309,6 @@ func (m *CreatePostResponse) XXX_DiscardUnknown() {
 }
 
 var xxx_messageInfo_CreatePostResponse proto.InternalMessageInfo
-
-func (m *CreatePostResponse) GetId() string {
-	if m != nil {
-		return m.Id
-	}
-	return ""
-}
 
 func (m *CreatePostResponse) GetPost() *Post {
 	if m != nil {
@@ -497,47 +497,48 @@ func init() {
 func init() { proto.RegisterFile("blog-service.proto", fileDescriptor_4b2258c2d16dff56) }
 
 var fileDescriptor_4b2258c2d16dff56 = []byte{
-	// 637 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xa4, 0x94, 0x4d, 0x6f, 0xd3, 0x4e,
-	0x10, 0xc6, 0x65, 0x27, 0x7d, 0x9b, 0xa8, 0x6f, 0xd3, 0xb4, 0xff, 0xfc, 0xad, 0x0a, 0x2c, 0x5f,
-	0xa8, 0x22, 0x62, 0x37, 0x69, 0x7b, 0x09, 0x17, 0x68, 0x0f, 0x15, 0x82, 0x43, 0x15, 0x5e, 0x0e,
-	0x1c, 0x90, 0x1c, 0x67, 0x70, 0xb6, 0x8d, 0xbd, 0xae, 0x77, 0x9d, 0xb6, 0x20, 0x2e, 0x7c, 0x04,
-	0xb8, 0xf1, 0xb5, 0x38, 0x70, 0xe5, 0xd0, 0x0f, 0x82, 0xbc, 0xde, 0xe6, 0xad, 0x41, 0x42, 0xe2,
-	0x94, 0xf8, 0x99, 0x67, 0x7e, 0xfb, 0x78, 0xc6, 0x5a, 0xc0, 0xee, 0x80, 0x87, 0x0d, 0x41, 0xe9,
-	0x90, 0x05, 0xe4, 0x26, 0x29, 0x97, 0x1c, 0xcd, 0x61, 0xd3, 0x7a, 0x18, 0x72, 0x1e, 0x0e, 0xc8,
-	0x53, 0x4a, 0x37, 0xfb, 0xe0, 0x49, 0x16, 0x91, 0x90, 0x7e, 0x94, 0x14, 0x26, 0x6b, 0x57, 0x1b,
-	0xfc, 0x84, 0x79, 0x7e, 0x1c, 0x73, 0xe9, 0x4b, 0xc6, 0x63, 0xa1, 0xab, 0x8f, 0xd5, 0x4f, 0xd0,
-	0x08, 0x29, 0x6e, 0x88, 0x2b, 0x3f, 0x0c, 0x29, 0xf5, 0x78, 0xa2, 0x1c, 0xf7, 0xdd, 0xce, 0x11,
-	0x2c, 0x9d, 0xf0, 0x28, 0xa2, 0x58, 0xe2, 0x0e, 0x2c, 0xfa, 0x99, 0xec, 0xf3, 0xb4, 0x66, 0xd8,
-	0xc6, 0xde, 0x4a, 0x47, 0x3f, 0x21, 0x42, 0x59, 0xd2, 0xb5, 0xac, 0x99, 0x4a, 0x55, 0xff, 0x9d,
-	0x4b, 0x28, 0x9f, 0x71, 0xf1, 0xe7, 0x9e, 0x2a, 0x2c, 0x48, 0x26, 0x07, 0xa4, 0x9b, 0x8a, 0x87,
-	0x11, 0xa9, 0x34, 0x26, 0xe1, 0x23, 0x58, 0x0e, 0x8a, 0x00, 0xa2, 0x56, 0xb6, 0x4b, 0x7b, 0x95,
-	0x56, 0xc5, 0x1d, 0x36, 0x5d, 0x1d, 0xaa, 0x33, 0x2a, 0x3a, 0x36, 0xac, 0x9d, 0x92, 0xcc, 0x4f,
-	0xed, 0xd0, 0x65, 0x46, 0x42, 0xe2, 0x1a, 0x98, 0xac, 0xa7, 0x0f, 0x36, 0x59, 0xcf, 0xf1, 0x60,
-	0x7d, 0xe4, 0x10, 0x09, 0x8f, 0x05, 0xe1, 0x2e, 0x94, 0x13, 0x2e, 0xa4, 0x32, 0x55, 0x5a, 0xcb,
-	0x39, 0x59, 0xd5, 0x95, 0xea, 0xbc, 0x81, 0xcd, 0x93, 0x94, 0x7c, 0x49, 0x93, 0xd4, 0x7f, 0x7e,
-	0x25, 0xe7, 0x18, 0x70, 0x12, 0xab, 0xa3, 0xcc, 0xa4, 0x1d, 0x45, 0x33, 0xe7, 0x46, 0xeb, 0x40,
-	0xb5, 0x60, 0xdc, 0x0d, 0x62, 0xfe, 0x3b, 0x4f, 0xa4, 0x35, 0xe7, 0x2e, 0x6d, 0x32, 0xd7, 0x11,
-	0x6c, 0xcf, 0x30, 0xff, 0x6a, 0x4a, 0x08, 0x1b, 0x2f, 0x99, 0x50, 0x73, 0x15, 0x3a, 0x86, 0x73,
-	0x00, 0x9b, 0x13, 0x9a, 0xc6, 0x3c, 0x80, 0x85, 0xbc, 0x41, 0xd4, 0x0c, 0xb5, 0xc7, 0x31, 0xa7,
-	0x90, 0x5b, 0x3f, 0x4d, 0xa8, 0x1c, 0x0f, 0x78, 0xf8, 0xaa, 0xf8, 0xe4, 0xf1, 0x05, 0xac, 0x8c,
-	0x20, 0x58, 0xcd, 0xdd, 0xb3, 0xe7, 0x58, 0xdb, 0x33, 0x6a, 0x71, 0x92, 0xb3, 0xf9, 0xe5, 0xc7,
-	0xed, 0x37, 0xb3, 0x82, 0x2b, 0xde, 0xb0, 0xe9, 0x29, 0x38, 0x3e, 0x87, 0x25, 0xbd, 0x7c, 0xc4,
-	0xbc, 0x69, 0xfa, 0x5b, 0xb1, 0xb6, 0xa6, 0x34, 0x8d, 0xd9, 0x56, 0x98, 0x75, 0x5c, 0xbd, 0xc3,
-	0x78, 0x9f, 0x58, 0xef, 0x33, 0x9e, 0x01, 0x8c, 0xf7, 0x87, 0x2a, 0xc2, 0xbd, 0xcf, 0xc4, 0xda,
-	0x99, 0x95, 0x35, 0x73, 0x4b, 0x31, 0x57, 0x9d, 0xe5, 0x3b, 0x66, 0xdb, 0xa8, 0xe3, 0x7b, 0x58,
-	0x9d, 0x9a, 0x3c, 0xd6, 0xc6, 0xdd, 0xd3, 0x0b, 0xb6, 0xfe, 0x9f, 0x53, 0xd1, 0xe8, 0x9a, 0x42,
-	0xa3, 0x33, 0x1d, 0xb7, 0x6d, 0xd4, 0x8f, 0x6f, 0x8d, 0xaf, 0xcf, 0x7e, 0x19, 0xf8, 0x11, 0xfe,
-	0x7b, 0xcb, 0x7a, 0xc4, 0xed, 0x53, 0x3f, 0x22, 0x3b, 0x1f, 0xb5, 0xad, 0xaf, 0x17, 0xe7, 0x1d,
-	0xe0, 0x6b, 0xba, 0x10, 0x37, 0x42, 0x52, 0x24, 0xec, 0x24, 0xe5, 0xe7, 0x14, 0x48, 0x74, 0xfb,
-	0x52, 0x26, 0xa2, 0xed, 0x79, 0x21, 0x93, 0xfd, 0xac, 0xeb, 0x06, 0x3c, 0xf2, 0xba, 0xe9, 0x8d,
-	0x1f, 0x37, 0x2e, 0x02, 0x4f, 0x8e, 0xfc, 0x0d, 0xed, 0xb7, 0xaa, 0xaa, 0x78, 0x11, 0xf4, 0x59,
-	0xf6, 0x34, 0x8c, 0x7c, 0x36, 0xc8, 0x3b, 0x5a, 0xa5, 0xa6, 0xbb, 0x5f, 0x37, 0x8c, 0xd6, 0x86,
-	0x9f, 0x24, 0x03, 0x16, 0xa8, 0xfb, 0xc5, 0x3b, 0x17, 0x3c, 0x6e, 0xdf, 0x53, 0x3a, 0x4f, 0xa0,
-	0x74, 0xb8, 0x7f, 0x88, 0x87, 0x50, 0xef, 0x90, 0xcc, 0xd2, 0x98, 0x7a, 0xf6, 0x55, 0x9f, 0x62,
-	0x5b, 0xf6, 0xc9, 0x4e, 0x49, 0xf0, 0x2c, 0x0d, 0xc8, 0xee, 0x71, 0x12, 0x76, 0xcc, 0xa5, 0x4d,
-	0xd7, 0x4c, 0x48, 0x17, 0x17, 0xa1, 0xfc, 0xdd, 0x34, 0x96, 0xba, 0x8b, 0xea, 0xce, 0x3a, 0xf8,
-	0x1d, 0x00, 0x00, 0xff, 0xff, 0x38, 0x3b, 0x1d, 0xcd, 0x3a, 0x05, 0x00, 0x00,
+	// 643 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x94, 0xcb, 0x6e, 0xd3, 0x4e,
+	0x14, 0xc6, 0x65, 0x27, 0xbd, 0x9d, 0xa8, 0xb7, 0xd3, 0xb4, 0x7f, 0xff, 0xad, 0x0a, 0x2c, 0x6f,
+	0xa8, 0x22, 0x62, 0x37, 0x69, 0xbb, 0x09, 0x1b, 0x68, 0x17, 0x15, 0x82, 0x45, 0x15, 0x2e, 0x0b,
+	0x16, 0x48, 0x8e, 0x73, 0x70, 0xa6, 0x8d, 0x3d, 0xc6, 0x33, 0x4e, 0x5b, 0x10, 0x0b, 0x78, 0x04,
+	0xd8, 0xf1, 0x5a, 0x2c, 0xd8, 0xb2, 0xe8, 0x83, 0x20, 0x8f, 0x9d, 0x7b, 0x2a, 0xb1, 0x4a, 0xfc,
+	0x9d, 0xef, 0xfc, 0xe6, 0x9b, 0x33, 0xa3, 0x01, 0xec, 0xf4, 0x79, 0x50, 0x17, 0x94, 0x0c, 0x98,
+	0x4f, 0x4e, 0x9c, 0x70, 0xc9, 0x51, 0x1f, 0x34, 0xcc, 0x87, 0x01, 0xe7, 0x41, 0x9f, 0x5c, 0xa5,
+	0x74, 0xd2, 0x0f, 0xae, 0x64, 0x21, 0x09, 0xe9, 0x85, 0x71, 0x6e, 0x32, 0xf7, 0x0b, 0x83, 0x17,
+	0x33, 0xd7, 0x8b, 0x22, 0x2e, 0x3d, 0xc9, 0x78, 0x24, 0x8a, 0xea, 0x63, 0xf5, 0xe3, 0xd7, 0x03,
+	0x8a, 0xea, 0xe2, 0xda, 0x0b, 0x02, 0x4a, 0x5c, 0x1e, 0x2b, 0xc7, 0xbc, 0xdb, 0x3e, 0x81, 0x95,
+	0x33, 0x1e, 0x86, 0x14, 0x49, 0xdc, 0x83, 0x65, 0x2f, 0x95, 0x3d, 0x9e, 0x18, 0x9a, 0xa5, 0x1d,
+	0xac, 0xb5, 0x8b, 0x2f, 0x44, 0x28, 0x4b, 0xba, 0x91, 0x86, 0xae, 0x54, 0xf5, 0xdf, 0xfe, 0xaa,
+	0x41, 0xf9, 0x82, 0x0b, 0x89, 0x1b, 0xa0, 0xb3, 0x6e, 0xd1, 0xa0, 0xb3, 0xee, 0x04, 0x44, 0x9f,
+	0x82, 0x54, 0x61, 0x49, 0x32, 0xd9, 0x27, 0xa3, 0xa4, 0xe4, 0xfc, 0x63, 0x84, 0x2e, 0x8f, 0xd1,
+	0xf8, 0x08, 0x56, 0xfd, 0x3c, 0x91, 0x30, 0x96, 0xac, 0xd2, 0x41, 0xa5, 0x59, 0x71, 0x06, 0x0d,
+	0xa7, 0x48, 0xd9, 0x1e, 0x15, 0x6d, 0x0b, 0x36, 0xce, 0x49, 0x66, 0x29, 0xda, 0xf4, 0x31, 0xa5,
+	0xf9, 0x30, 0xb6, 0x0b, 0x9b, 0x23, 0x87, 0x88, 0x79, 0x24, 0x08, 0xf7, 0xa1, 0x1c, 0x73, 0x21,
+	0x95, 0xa9, 0xd2, 0x5c, 0xcd, 0xc8, 0xaa, 0xae, 0x54, 0xfb, 0x0d, 0x6c, 0x9f, 0x25, 0xe4, 0x49,
+	0x9a, 0xa4, 0xde, 0x37, 0x97, 0xd1, 0x96, 0xf4, 0x45, 0x5b, 0x2a, 0x4d, 0x4c, 0xab, 0x09, 0x38,
+	0x89, 0x9d, 0x89, 0xa2, 0x2f, 0x8c, 0xd2, 0x86, 0x6a, 0xde, 0x33, 0xdc, 0xf8, 0xe2, 0x3d, 0xde,
+	0x3b, 0xf0, 0x45, 0x39, 0x4e, 0x60, 0x77, 0x86, 0xf9, 0x4f, 0x53, 0x41, 0xd8, 0x7a, 0xc9, 0x84,
+	0x9a, 0xa3, 0x28, 0x62, 0xd8, 0x47, 0xb0, 0x3d, 0xa1, 0x15, 0x98, 0x07, 0xb0, 0x94, 0x35, 0x08,
+	0x43, 0x53, 0xe7, 0x36, 0xe6, 0xe4, 0x72, 0xf3, 0xb7, 0x0e, 0x95, 0xd3, 0x3e, 0x0f, 0x5e, 0xe5,
+	0x77, 0x1e, 0x5f, 0xc0, 0xda, 0x08, 0x82, 0xd5, 0xcc, 0x3d, 0xbb, 0x8e, 0xb9, 0x3b, 0xa3, 0xe6,
+	0x2b, 0xd9, 0xdb, 0xdf, 0x7e, 0xdd, 0xfd, 0xd0, 0x2b, 0xb8, 0xe6, 0x0e, 0x1a, 0xae, 0x82, 0xe3,
+	0x73, 0x58, 0x29, 0x0e, 0x1b, 0x31, 0x6b, 0x9a, 0xbe, 0x1b, 0xe6, 0xce, 0x94, 0x56, 0x60, 0x76,
+	0x15, 0x66, 0x13, 0xd7, 0x87, 0x18, 0xf7, 0x33, 0xeb, 0x7e, 0xc1, 0x0b, 0x80, 0xf1, 0x79, 0xa1,
+	0x8a, 0x30, 0x77, 0x2d, 0xcc, 0xbd, 0x59, 0xb9, 0x60, 0xee, 0x28, 0xe6, 0xba, 0xbd, 0x3a, 0x64,
+	0xb6, 0xb4, 0x1a, 0xbe, 0x87, 0xf5, 0xa9, 0xc9, 0xa3, 0x31, 0xee, 0x9e, 0x3e, 0x60, 0xf3, 0xff,
+	0x05, 0x95, 0x02, 0x6d, 0x28, 0x34, 0xda, 0xd3, 0x71, 0x5b, 0x5a, 0xed, 0xf4, 0x4e, 0xfb, 0xfe,
+	0xec, 0x8f, 0x86, 0x9f, 0xe0, 0xbf, 0xb7, 0xac, 0x4b, 0xdc, 0x3a, 0xf7, 0x42, 0xb2, 0xb2, 0x51,
+	0x5b, 0xc5, 0xfb, 0x62, 0xbf, 0x03, 0x7c, 0x4d, 0x57, 0xe2, 0x56, 0x48, 0x0a, 0x85, 0x15, 0x27,
+	0xfc, 0x92, 0x7c, 0x89, 0x4e, 0x4f, 0xca, 0x58, 0xb4, 0x5c, 0x37, 0x60, 0xb2, 0x97, 0x76, 0x1c,
+	0x9f, 0x87, 0x6e, 0x27, 0xb9, 0xf5, 0xa2, 0xfa, 0x95, 0xef, 0xca, 0x91, 0xbf, 0x5e, 0xf8, 0xcd,
+	0xaa, 0x2a, 0x5e, 0xf9, 0x3d, 0x96, 0x3e, 0x0d, 0x42, 0x8f, 0xf5, 0xb3, 0x8e, 0x66, 0xa9, 0xe1,
+	0x1c, 0xd6, 0x34, 0xad, 0xb9, 0xe5, 0xc5, 0x71, 0x9f, 0xf9, 0xea, 0x81, 0x71, 0x2f, 0x05, 0x8f,
+	0x5a, 0x73, 0x4a, 0xfb, 0x09, 0x94, 0x8e, 0x0f, 0x8f, 0xf1, 0x18, 0x6a, 0x6d, 0x92, 0x69, 0x12,
+	0x51, 0xd7, 0xba, 0xee, 0x51, 0x64, 0xc9, 0x1e, 0x59, 0x09, 0x09, 0x9e, 0x26, 0x3e, 0x59, 0x5d,
+	0x4e, 0xc2, 0x8a, 0xb8, 0xb4, 0xe8, 0x86, 0x09, 0xe9, 0xe0, 0x32, 0x94, 0x7f, 0xea, 0xda, 0x4a,
+	0x67, 0x59, 0x3d, 0x5a, 0x47, 0x7f, 0x03, 0x00, 0x00, 0xff, 0xff, 0xa6, 0x7e, 0x88, 0xf3, 0x3b,
+	0x05, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
